flux/apps/adguard-home/base/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-ui
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: dns-setup
    port: 3000
    targetPort: 3000
  type: ClusterIP
