flux/apps/adguard-home/base/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
  type: LoadBalancer
  internalTrafficPolicy: Local
  loadBalancerIP: 192.168.0.103
