flux/apps/adguard-home/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ingress
  namespace: adguard
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.1.0/16,10.0.0.0/8"
    nginx.ingress.kubernetes.io/proxy-body-size: "128m"
spec:
  ingressClassName: nginx
  rules:
  - host: adguard.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard-ui
            port:
              number: 8080 # changed from 3000 (initial setup)
